# chi-internship-labs

./: .gitignore  CMakeLists.txt
cmake/: build.cmake
labs-main/: CMakeLists.txt
labs-main/lab1/: CMakeLists.txt  main.cpp  txt.cpp  txt.hpp
labs-main/lab2/: CMakeLists.txt  list.hpp  main.cpp  pair.hpp
labs-main/lab2/inl/: list.inl  pair.inl
labs-main/lab3/: CMakeLists.txt  main.cpp  product.hpp  sale.hpp
labs-main/lab3/inl/: product.inl  sale.inl
tasks/: LB1 - Move and Copy Semantics.docx  LB2 - Templates.docx  LB3 - STL.docx
