### CMake setup

# Version
cmake_minimum_required(VERSION 3.17 FATAL_ERROR)
# Policies
cmake_policy(SET CMP0077 NEW) # option honors normal variables

### Meta info

# Names
set(META_LABS_PROJECT_NAME "chi-internship-labs")
string(TOUPPER "chi-labs" META_LABS_PROJECT_NAME_PREFIX)
string(TOUPPER ${META_LABS_PROJECT_NAME} META_LABS_PROJECT_NAME_UPPER)
set(META_LABS_PROJECT_FULL_NAME "${META_LABS_PROJECT_NAME}")
set(META_LABS_PROJECT_DESCRIPTION "The LABS 3D Rendering Engine")
set(META_LABS_AUTHOR "udv-code")
set(META_LABS_AUTHOR_DOMAIN "https://github.com/${META_LABS_AUTHOR}/${META_LABS_PROJECT_NAME}")

# Version
set(META_LABS_VERSION_MAJOR "1")
set(META_LABS_VERSION_MINOR "0")
set(META_LABS_VERSION_PATCH "0")
set(META_LABS_VERSION_TWEAK "0")
set(META_LABS_VERSION "${META_LABS_VERSION_MAJOR}.${META_LABS_VERSION_MINOR}.${META_LABS_VERSION_PATCH}.${META_LABS_VERSION_TWEAK}")
set(META_LABS_NAME_VERSION "${META_LABS_PROJECT_FULL_NAME} v${META_LABS_VERSION_MAJOR}.${META_LABS_VERSION_MINOR}.${META_LABS_VERSION_PATCH}.${META_LABS_VERSION_TWEAK}")

# Targets
set(LABS_BASE_TARGET_NAME "${META_LABS_PROJECT_NAME}")

macro (get_target_name TNAME VAR)
	set(${VAR} "${LABS_BASE_TARGET_NAME}-${TNAME}")
endmacro ()

# Configs
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
set_property(GLOBAL PROPERTY USE_FOLDERS ON)

### Project
project(${META_LABS_PROJECT_FULL_NAME}
		VERSION ${META_LABS_VERSION}
		DESCRIPTION ${META_LABS_PROJECT_DESCRIPTION}
		HOMEPAGE_URL ${META_LABS_AUTHOR_DOMAIN}
		LANGUAGES CXX)

### Language Options
# C++
set(CXX_STANDARD_DEFAULT 17)
set(CMAKE_CXX_STANDARD ${CXX_STANDARD_DEFAULT})
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

### Modules
include(build)
include(assets)

### Engine
add_subdirectory(labs-main)